NEON-1920 Moved the filter container from the visualization-headers directive into the single-table-visualization.  Renamed visualization-headers to visualization-heading.  Added options menu text support to the new aggregation table.

--- a/client/components/optionsMenu/optionsMenu.html
+++ b/client/components/optionsMenu/optionsMenu.html
@@ -1,5 +1,5 @@
 <div class="chart-options pull-right">
-    <a class="btn collapsed" data-toggle="collapse" data-target=".{{uniqueVisualizationOptions}} .popover" data-animation=false ng-click="toggleOptionsDisplay()">
+    <a class="chart-options-button btn collapsed" data-toggle="collapse" data-target=".{{uniqueVisualizationOptions}} .popover" data-animation=false ng-click="toggleOptionsDisplay()">
         <span id="text" class="header-text" ng-bind="getButtonText()" ng-show="showButtonText()" title="Open/Close the Options Menu" style="display: none;"></span>
         <span id="symbol" class="glyphicon glyphicon-exclamation-sign" ng-show="showButtonText()" title="Open/Close the Options Menu"></span>
         <span class="glyphicon glyphicon-cog" title="Open/Close the Options Menu"></span>
