NEON-1920 Amending parts of the previous commit:  the single-table-visualization still contains the filter-container but the filter-reset element has moved to the new filter-notification directive.  Changed visualization-heading back to visualization-headers.  The visualization-headers directive now contains all headers and the filter-notification.

--- a/client/components/aggregationTable/aggregationTableHeaders.html
+++ b/client/components/aggregationTable/aggregationTableHeaders.html
@@ -1,1 +1,3 @@
 <h4 ng-show="active.showTooMuchDataError">The query exceeded the memory limit.  Please add a filter to requery.</h4>
+
+<filter-notification filter="filter" remove-filter="functions.removeFilter"></filter-notification>
