--- a/client/components/singleTableVisualization/singleTableVisualization.html
+++ b/client/components/singleTableVisualization/singleTableVisualization.html
@@ -1,16 +1,16 @@
 <!-- An ng-controller is added before compilation. -->
 <div class="visualization {{type + 'Directive'}}" active="active" bindings="bindings" fields="fields" filter="filter" functions="functions">
-    <div class="header-container" ng-show="!(bindings.hideHeader)">
+    <div class="header-container" ng-hide="bindings.hideHeader">
         <div class="title header-text pull-left" ng-bind="createTitle()"></div>
 
         <options-menu parent-element="element" export-function="makeExportObject" button-text="optionsMenuButtonText" show-button-text="showOptionsMenuButtonText">
-            <div class="form-group" ng-show="!(bindings.hideAdvancedOptions)">
+            <div class="form-group" ng-hide="bindings.hideAdvancedOptions">
                 <label>Database</label>
                 <select class="form-control" ng-model="active.database" ng-options="database.prettyName for database in databases" ng-required="true" ng-disabled="(databases.length < 2)" ng-change="handleChangeDatabase()">
                 </select>
             </div>
 
-            <div class="form-group" ng-show="!(bindings.hideAdvancedOptions)">
+            <div class="form-group" ng-hide="bindings.hideAdvancedOptions">
                 <label>Table</label>
                 <select class="form-control" ng-model="active.table" ng-options="table.prettyName for table in tables" ng-required="true" ng-disabled="(tables.length < 2)" ng-change="handleChangeTable()">
                 </select>
@@ -18,7 +18,7 @@
 
             <visualization-options class="visualization-options" active="active" bindings="bindings" fields="fields" functions="functions"></visualization-options>
 
-            <div class="form-group" ng-show="!(bindings.hideAdvancedOptions)">
+            <div class="form-group" ng-hide="bindings.hideAdvancedOptions">
                 <label>Unshared Filter</label>
                 <select class="form-control" ng-model="active.unsharedFilterField" ng-required="false" ng-disabled="!(fields.length > 0)" ng-options="field.prettyName for field in fields" ng-change="handleChangeUnsharedFilterField()">
                     <option selected value="">None</option>
@@ -41,13 +41,9 @@
 
     <div class="clearfix"></div>
 
-    <div class="header-container filter-container" ng-class="{true: 'shrink', false: ''}[filter === undefined && functions.hideFilterHeader()]">
-        <visualization-heading class="visualization-heading pull-left" active="active" functions="functions"></visualization-heading>
-
-        <div class="header-item filter-reset pull-right" ng-class="{true: 'hidden', false: ''}[filter === undefined]" title="functions.createFilterText()">
-            <span class="filter-label" ng-bind="filter.value"></span>
-            <span class="glyphicon glyphicon-remove" ng-click="functions.removeFilter()"></span>
-        </div>
+    <!-- Shrink the container instead of hiding it in order to trigger a resize event. -->
+    <div class="header-container filter-container" ng-class="{true: 'shrink', false: ''}[functions.hideFilterHeader()]">
+        <visualization-headers class="visualization-headers" active="active" filter="filter" functions="functions"></visualization-headers>
     </div>
 
     <div class="clearfix"></div>
