--- a/client/components/filterNotification/filterNotification.html
+++ b/client/components/filterNotification/filterNotification.html
@@ -1,4 +1,4 @@
-<div class="header-item filter-reset pull-right" ng-class="{true: 'hidden', false: ''}[filter === undefined]">
-    <span class="filter-label" title="{{filter.field + ' = ' + filter.value}}" ng-bind="filter.value"></span>
-    <span class="glyphicon glyphicon-remove" title="Delete Filter {{filter.field + ' = ' + filter.value}}" ng-click="removeFilter()"></span>
+<div class="header-item filter-reset pull-right" ng-repeat="item in filter.data">
+    <span class="filter-label" title="{{item.field + ' = ' + item.value}}" ng-bind="item.value"></span>
+    <span class="glyphicon glyphicon-remove" title="{{'Delete Filter ' + item.field + ' = ' + item.value}}" ng-click="removeFilter(item)"></span>
 </div>
