--- a/client/components/singleTableVisualization/singleTableVisualization.less
+++ b/client/components/singleTableVisualization/singleTableVisualization.less
@@ -17,4 +17,12 @@
     padding: 10px;
     height: 100%;
     width: 100%;
+
+    .filter-container {
+        // Shrink the filter container whenever unused to trigger a jquery resize event that will update the size of the table.
+        &.shrink {
+            height: 0px;
+            min-height: 0px;
+        }
+    }
 }
