NEON-1920 Moved the dependency on the Links Popup Service from the Aggregation Table and Text Cloud into the Single Table Visualization superclass.

--- a/client/components/aggregationTable/aggregationTableHeaders.html
+++ b/client/components/aggregationTable/aggregationTableHeaders.html
@@ -1,3 +1,3 @@
 <h4 ng-show="active.showTooMuchDataError">The query exceeded the memory limit.  Please add a filter to requery.</h4>
 
-<filter-notification filter="filter" remove-filter="functions.removeFilter"></filter-notification>
+<filter-notification filter-data="filter.data" remove-filter="removeFilter" visualization-id="visualizationId"></filter-notification>
