--- a/client/components/filterNotification/filterNotification.html
+++ b/client/components/filterNotification/filterNotification.html
@@ -1,4 +1,6 @@
-<div class="header-item filter-reset pull-right" ng-repeat="item in filter.data">
-    <span class="filter-label" title="{{item.field + ' = ' + item.value}}" ng-bind="item.value"></span>
-    <span class="glyphicon glyphicon-remove" title="{{'Delete Filter ' + item.field + ' = ' + item.value}}" ng-click="removeFilter(item)"></span>
+<div class="header-item filter-reset pull-right" ng-repeat="item in filterData">
+    <links-popup-button key="{{getLinksPopupKey(item.value)}}" json="{{getLinksPopupJson(item.value)}}" source="{{visualizationId}}" tooltip="{{item.value}}"
+        is-disabled="{{!showLinksPoupButton}}"></links-popup-button>
+    <span class="filter-label" title="{{item.title}}" ng-bind="item.display"></span>
+    <span class="glyphicon glyphicon-remove" title="{{'Delete Filter ' + item.title}}" ng-click="removeFilter(item.value)"></span>
 </div>
