--- a/client/components/textCloud/textCloudHeaders.html
+++ b/client/components/textCloud/textCloudHeaders.html
@@ -1,1 +1,3 @@
-<filter-notification filter-data="filter.data" get-links-popup-key="generateLinksPopupKey" remove-filter="removeFilter" show-links-popup-button="showLinksPopupButton" visualization-id="visualizationId"></filter-notification>
+<filter-notification get-filter-data="getFilterData" get-filter-desc="createFilterDesc" get-filter-text="createFilterText"
+    get-links-popup-key="generateLinksPopupKey" remove-filter="removeFilter" show-links-popup-button="showLinksPopupButton"
+    visualization-id="visualizationId"></filter-notification>
