--- a/client/components/aggregationTable/aggregationTableHeaders.html
+++ b/client/components/aggregationTable/aggregationTableHeaders.html
@@ -1,3 +1,4 @@
 <h4 ng-show="active.showTooMuchDataError">The query exceeded the memory limit.  Please add a filter to requery.</h4>
 
-<filter-notification filter-data="filter.data" remove-filter="removeFilter" visualization-id="visualizationId"></filter-notification>
+<filter-notification get-filter-data="getFilterData" get-filter-desc="createFilterDesc" get-filter-text="createFilterText" remove-filter="removeFilter"
+    visualization-id="visualizationId"></filter-notification>
