--- a/client/components/singleTableVisualization/singleTableVisualization.html
+++ b/client/components/singleTableVisualization/singleTableVisualization.html
@@ -1,5 +1,5 @@
 <!-- An ng-controller is added before compilation. -->
-<div class="visualization {{type + 'Directive'}}" active="active" bindings="bindings" fields="fields" filter="filter" functions="functions">
+<div class="visualization {{type + 'Directive'}}" active="active" bindings="bindings" fields="fields" functions="functions">
     <div class="header-container" ng-hide="bindings.hideHeader">
         <div class="title header-text pull-left" ng-bind="createTitle()"></div>
 
@@ -48,7 +48,7 @@
 
     <!-- Shrink the container instead of hiding it in order to trigger a resize event. -->
     <div class="header-container filter-container" ng-class="{true: 'shrink', false: ''}[functions.hideFilterHeader()]">
-        <visualization-headers class="visualization-headers" active="active" filter="filter" functions="functions"></visualization-headers>
+        <visualization-headers class="visualization-headers" active="active" functions="functions"></visualization-headers>
     </div>
 
     <div class="clearfix"></div>
