--- a/client/components/addVisualization/addVisualization.html
+++ b/client/components/addVisualization/addVisualization.html
@@ -19,7 +19,7 @@
                     <li ng-repeat="item in visualizations" ng-init="item.selected = false" ng-class="(item.selected) ? 'selected' : ''">
                         <div class="neon-popup-thumbnail center-block text-center">
                             <button  ng-click="onItemSelected(item)" tabindex="0">
-                                <div class="neon-sprite-container center-block">
+                                <div class="center-block">
                                     <div class="icon-{{item.icon}} neon-sprite" alt="{{item.name}}"></div>
                                 </div>
                                 <span class="text-uppercase short" ng-bind="item.name"></span>
