--- a/client/components/singleTableVisualization/singleTableVisualization.less
+++ b/client/components/singleTableVisualization/singleTableVisualization.less
@@ -17,6 +17,8 @@
     padding: 10px;
     height: 100%;
     width: 100%;
+    overflow-x: hidden;
+    overflow-y: auto;
 
     .filter-container {
         // Shrink the filter container whenever unused to trigger a jquery resize event that will update the size of the table.
