--- a/client/components/timeline/timeline.less
+++ b/client/components/timeline/timeline.less
@@ -1,5 +1,5 @@
 //
-// Copyright 2014 Next Century Corporation
+// Copyright 2016 Next Century Corporation
 // Licensed under the Apache License, Version 2.0 (the "License");
 // you may not use this file except in compliance with the License.
 // You may obtain a copy of the License at
@@ -13,24 +13,15 @@
 // limitations under the License.
 //
 
-.timeline-selector {
-    display:block;
-    margin: 0px;
-    padding: 10px;
-    overflow-x: hidden;
-    overflow-y: auto;
-    height: @widget-height;
-    width: @widget-width;
+.timelineDirective {
+    height: 100%;
+    width: 100%;
 
     .chart-options {
         .popover {
             /* Set the width so that the date granularity buttons fit on one row. */
             min-width: 325px;
         }
-    }
-
-    .text-center{
-        margin: 10px 0px 0px 0px;
     }
 
     .timeseries-selector {
@@ -91,6 +82,8 @@
             font-family: "Open Sans", Helvetica, arial, sans-serif;
             color: @main-text-color;
             font-size: 16px;
+            /* Set the height to match the height of the animation controls. */
+            height: 34px;
 
             &:hover {
                 color: @accent-bright;
@@ -161,14 +154,118 @@
     .animation-controls {
         margin: 0px 10px;
     }
+
+    .brush {
+        .extent {
+            fill-opacity: 0;
+            shape-rendering: crispEdges;
+        }
+
+        .mask{
+            fill: @main-background;
+            fill-opacity: 0.65;
+        }
+
+        .resize {
+            path {
+                fill: @light-chart-axis-color;
+                stroke: @chart-text-color;
+                stroke-opacity: 0.5;
+            }
+        }
+
+        .resize-divider{
+            fill: @chart-text-color;
+            fill-opacity: 0.3;
+        }
+
+        rect.background {
+            cursor: pointer !important;
+        }
+    }
+
+    .timeline-selector-chart {
+        margin: 0 -15px 0;
+        display:block;
+        min-height: 120px;
+
+        h3 {
+            margin-top: 0px;
+        }
+
+        svg {
+            font-size: 10px;
+            width: 100%;
+            display: block;
+            margin: auto;
+        }
+
+        .area {
+            fill: @accent-bright;
+            stroke: @accent-bright;
+            stroke-width: 1px;
+            clip-path: url(#clip);
+        }
+
+        .axis {
+            path {
+                display: none;
+            }
+
+            line {
+                fill: none;
+                stroke: @chart-axis-color;
+                shape-rendering: crispEdges;
+            }
+        }
+
+        .bar {
+          fill: @accent-bright;
+          stroke: @accent-bright;
+          stroke-width: 1px;
+        }
+
+        .mini-axis{
+          fill: none;
+          shape-rendering: crispEdges;
+          stroke: @shadow;
+          stroke-width : 1px;
+        }
+
+        .series-title {
+            text-shadow: @visualization-label-shadow;
+            font-weight: bold;
+            font-size: 13px;
+        }
+
+        .tick {
+            text{
+                fill: @chart-text-color;
+            }
+        }
+
+        .y.axis {
+            text {
+                text-shadow: @visualization-label-shadow;
+                font-weight: bold;
+            }
+
+            path {
+                display: none;
+            }
+
+            .tick {
+                line{
+                    display: none;
+                }
+            }
+        }
+    }
 }
 
 .gridster-mobile {
     .visualization-widget {
-        .timeline-selector {
-            display:block;
-            margin: 0px;
-            padding: 20px;
+        .timelineDirective {
             height: @mobile-widget-height;
         }
     }
