NEON-1920 The News Feed is now created through the Single Table Visualization superclass.  Also improved how translation is run in the superclass.

--- a/client/components/aggregationTable/aggregationTable.less
+++ b/client/components/aggregationTable/aggregationTable.less
@@ -41,7 +41,7 @@
     .visualization-widget {
         .aggregationTableDirective {
             height: @mobile-widget-height;
-            width: @widget-width;
+            width: @mobile-widget-width;
         }
     }
 }
