--- a/client/components/timeline/timeline.less
+++ b/client/components/timeline/timeline.less
@@ -267,6 +267,7 @@
     .visualization-widget {
         .timelineDirective {
             height: @mobile-widget-height;
+            width: @mobile-widget-width;
         }
     }
 }
