--- a/client/components/textCloud/textCloud.less
+++ b/client/components/textCloud/textCloud.less
@@ -15,7 +15,9 @@
 
 .text-cloud {
     text-align: center;
-    margin: 0 -8px;
+    overflow-y: auto;
+    margin: 0 -10px;
+    height: inherit;
 
     @media (min-width: 1860px) {
         font-size: 12px;
