--- a/client/components/singleTableVisualization/singleTableVisualization.html
+++ b/client/components/singleTableVisualization/singleTableVisualization.html
@@ -47,7 +47,7 @@
     <div class="clearfix"></div>
 
     <!-- Shrink the container instead of hiding it in order to trigger a resize event. -->
-    <div class="header-container filter-container" ng-class="{true: 'shrink', false: ''}[functions.hideFilterHeader()]">
+    <div class="header-container filter-container" ng-class="{true: 'shrink', false: ''}[functions.hideHeaders()]">
         <visualization-headers class="visualization-headers" active="active" functions="functions"></visualization-headers>
     </div>
 
