--- a/client/components/singleTableVisualization/singleTableVisualization.html
+++ b/client/components/singleTableVisualization/singleTableVisualization.html
@@ -1,7 +1,7 @@
 <!-- An ng-controller is added before compilation. -->
 <div class="visualization {{type + 'Directive'}}" active="active" bindings="bindings" fields="fields" functions="functions">
     <div class="header-container" ng-hide="bindings.hideHeader">
-        <div class="title header-text pull-left" ng-bind="createTitle()"></div>
+        <div class="title header-text pull-left" ng-bind="createTitle()" title="{{createTitle()}}"></div>
 
         <options-menu parent-element="element" export-function="makeExportObject" button-text="optionsMenuButtonText" show-button-text="showOptionsMenuButtonText">
             <translation-options ng-show="translationsOn" on-translate="handleToggleTranslations"
