--- a/client/components/scatterPlot/scatterPlot.less
+++ b/client/components/scatterPlot/scatterPlot.less
@@ -1,8 +1,6 @@
-.plotly-graph-directive {
-    height: @widget-height;
-    width: @widget-width;
-    margin: 0px;
-    padding: 10px;
+.scatterPlotDirective {
+    height: 100%;
+    width: 100%;
 
     .header-container {
         .limit-text {
@@ -19,6 +17,8 @@
     }
 
     .graph-div {
+        height: inherit;
+
         .modebar {
             background-color: @visualization-box-background-transparent;
             .modebar-btn {
