--- a/client/components/textCloud/textCloudHeaders.html
+++ b/client/components/textCloud/textCloudHeaders.html
@@ -1,3 +1,2 @@
-<filter-notification get-filter-data="getFilterData" get-filter-desc="createFilterDesc" get-filter-text="createFilterText"
-    get-links-popup-key="generateLinksPopupKey" remove-filter="removeFilter" show-links-popup-button="showLinksPopupButton"
-    visualization-id="visualizationId"></filter-notification>
+<filter-notification get-data="getFilterData" get-desc="createFilterDesc" get-text="createFilterText" get-links-popup-key="generateLinksPopupKey" remove="removeFilter"
+    show-links-popup-button="showLinksPopupButton" visualization-id="visualizationId"></filter-notification>
