--- a/client/components/timeline/timelineHeaders.html
+++ b/client/components/timeline/timelineHeaders.html
@@ -62,6 +62,5 @@
     </ul>
 </div>
 
-<filter-notification get-filter-data="getFilterData" get-filter-desc="createFilterDesc" get-filter-text="createFilterText"
-    get-links-popup-key="getLinksPopupKey" remove-filter="clearBrush" show-links-popup-button="showLinksPopupButton"
-    visualization-id="visualizationId"></filter-notification>
+<filter-notification get-data="getFilterData" get-desc="createFilterDesc" get-text="createFilterText" get-links-popup-key="getLinksPopupKey" remove="clearBrush"
+    show-links-popup-button="showLinksPopupButton" visualization-id="visualizationId"></filter-notification>
