--- a/client/components/barChart/barChart.less
+++ b/client/components/barChart/barChart.less
@@ -13,23 +13,17 @@
 // limitations under the License.
 //
 
-.barchartDirective {
-    margin: auto;
-    padding: 10px;
-    display: block;
+.barChartDirective {
+    height: 100%;
+    width: 100%;
 
     .barchart {
-        margin: 0 0 0;
-        min-height: 50px;
+        height: inherit;
         overflow-x: auto;
         overflow-y: hidden;
 
-        svg {
-            font-size: 10px;
-
-            .tick {
-                fill: @chart-text-color;
-            }
+        .tick {
+            fill: @chart-text-color;
         }
 
         .axis {
@@ -99,6 +93,14 @@
             opacity: 0.5;
         }
 
+        .x {
+            &.axis {
+                path {
+                    display: none;
+                }
+            }
+        }
+
         .y {
             &.axis {
                 text{
@@ -117,16 +119,6 @@
                   display: none;
                 }
             }
-        }
-
-        #chart {
-            background-color: @light-background;
-        }
-
-        .chart-div {
-            margin: auto;
-            display: block;
-            min-height: 250px;
         }
 
         .charttooltip {
@@ -155,10 +147,7 @@
 
         #plot {
             font-size: 10px;
-            text-align: right;
-            display: block;
-            margin: auto;
-            height: 100%;
+            height: inherit;
         }
     }
 
@@ -175,27 +164,11 @@
     }
 }
 
-.visualization-widget {
-    .barchartDirective {
-        height: @widget-height;
-        width: @widget-width;
-    }
-}
-
 .gridster-mobile {
     .visualization-widget {
-        .barchartDirective {
-            min-height: @mobile-widget-height;
+        .barChartDirective {
             height: @mobile-widget-height;
             width: @mobile-widget-width;
-        }
-    }
-}
-
-.x {
-    &.axis {
-        path {
-            display: none;
         }
     }
 }
