--- a/client/components/sample/sample.less
+++ b/client/components/sample/sample.less
@@ -1,5 +1,5 @@
 //
-// Copyright 2015 Next Century Corporation
+// Copyright 2016 Next Century Corporation
 // Licensed under the Apache License, Version 2.0 (the "License");
 // you may not use this file except in compliance with the License.
 // You may obtain a copy of the License at
@@ -16,8 +16,24 @@
 .sampleDirective {
     height: @widget-height;
     width: @widget-width;
-    overflow: auto;
-    padding: 10px;
+
+    .visualization-display {
+        display: block;
+        overflow: auto;
+
+        a {
+            &:hover, &:focus {
+                cursor: pointer;
+            }
+        }
+    }
 
     /* TODO */
+}
+
+.gridster-mobile {
+    .sampleDirective {
+        height: @mobile-widget-height;
+        width: @mobile-widget-width;
+    }
 }
