--- a/client/components/barChart/barChartOptions.html
+++ b/client/components/barChart/barChartOptions.html
@@ -1,10 +1,10 @@
-<div class="form-group" ng-hide="hideAdvancedOptions">
+<div class="form-group" ng-hide="bindings.hideAdvancedOptions">
     <label>Group Field (X Axis)</label>
     <select class="form-control" ng-model="active.groupField" ng-options="field.prettyName for field in fields" ng-required="true" ng-disabled="!(fields.length > 0)" ng-change="handleChangeAggregationField()">
     </select>
 </div>
 
-<div class="form-group" ng-hide="hideAdvancedOptions">
+<div class="form-group" ng-hide="bindings.hideAdvancedOptions">
     <label>Aggregation</label>
     <select class="form-control" ng-model="active.aggregation" ng-change="handleChangeAggregationField()">
         <option value="count">Count</option>
@@ -13,7 +13,7 @@
     </select>
 </div>
 
-<div class="form-group" ng-hide="hideAdvancedOptions || active.aggregation === 'count'">
+<div class="form-group" ng-hide="bindings.hideAdvancedOptions || active.aggregation === 'count'">
     <label>Aggregation Field (Y Axis)</label>
     <select class="form-control" ng-model="active.aggregationField" ng-options="field.prettyName for field in fields" ng-required="true" ng-disabled="!(fields.length > 0)" ng-change="handleChangeAggregationField()">
     </select>
