--- a/client/components/ganttChart/ganttChartOptions.html
+++ b/client/components/ganttChart/ganttChartOptions.html
@@ -1,37 +1,37 @@
-<div class="form-group" ng-hide="hideAdvancedOptions">
+<div class="form-group" ng-hide="bindings.hideAdvancedOptions">
     <label>Start Field</label>
     <select class="form-control" ng-model="active.startField" ng-options="field.prettyName for field in fields" ng-disabled="!(fields.length > 0)" ng-change="handleChangeStartField()">
     </select>
 </div>
 
-<div class="form-group" ng-hide="hideAdvancedOptions">
+<div class="form-group" ng-hide="bindings.hideAdvancedOptions">
     <label>End Field</label>
     <select class="form-control" ng-model="active.endField" ng-options="field.prettyName for field in fields" ng-disabled="!(fields.length > 0)" ng-change="handleChangeEndField()">
     </select>
 </div>
 
-<div class="form-group" ng-hide="hideAdvancedOptions">
+<div class="form-group" ng-hide="bindings.hideAdvancedOptions">
     <label>Color Field</label>
     <select class="form-control" ng-model="active.colorField" ng-options="field.prettyName for field in fields" ng-disabled="!(fields.length > 0)" ng-change="handleChangeColorField()">
         <option value="">None</option>
     </select>
 </div>
 
-<div class="form-group" ng-hide="hideAdvancedOptions">
+<div class="form-group" ng-hide="bindings.hideAdvancedOptions">
     <label>Title Field</label>
     <select class="form-control" ng-model="active.titleField" ng-options="field.prettyName for field in fields" ng-disabled="!(fields.length > 0)" ng-change="handleChangeTitleField()">
         <option value="">None</option>
     </select>
 </div>
 
-<div class="form-group" ng-hide="hideAdvancedOptions" ng-repeat="groupField in active.groupFields">
+<div class="form-group" ng-hide="bindings.hideAdvancedOptions" ng-repeat="groupField in active.groupFields">
     <label ng-bind="'Group Field ' + ($index + 1)"></label>
     <select class="form-control" ng-model="groupField" ng-options="field.prettyName for field in fields" ng-disabled="!(fields.length > 0)" ng-change="handleChangeGroupField($index, groupField)">
         <option value="">None</option>
     </select>
 </div>
 
-<div class="form-group" ng-hide="hideAdvancedOptions">
+<div class="form-group" ng-hide="bindings.hideAdvancedOptions">
     <label ng-bind="'Group Field ' + (active.groupFields.length + 1)"></label>
     <div class="input-group">
         <select class="form-control" ng-model="active.newGroupField" ng-options="field.prettyName for field in fields" ng-disabled="!(fields.length > 0)">
