--- a/client/components/networkGraph/networkGraphOptions.html
+++ b/client/components/networkGraph/networkGraphOptions.html
@@ -1,59 +1,59 @@
-<div class="form-group" ng-hide="hideAdvancedOptions">
+<div class="form-group" ng-hide="bindings.hideAdvancedOptions">
     <label>Node Field</label>
     <select class="form-control" ng-model="active.nodeField" ng-options="field.prettyName for field in fields" ng-required="true" ng-disabled="(fields.length == 0)" ng-change="handleChangeNodeField()">
     </select>
 </div>
 
-<div class="form-group" ng-hide="hideAdvancedOptions">
+<div class="form-group" ng-hide="bindings.hideAdvancedOptions">
     <label>Name Field</label>
     <select class="form-control" ng-model="active.nameField" ng-options="field.prettyName for field in fields" ng-required="false" ng-disabled="(fields.length == 0)" ng-change="handleChangeNameField()">
         <option value="">None</option>
     </select>
 </div>
 
-<div class="form-group" ng-hide="hideAdvancedOptions">
+<div class="form-group" ng-hide="bindings.hideAdvancedOptions">
     <label>Size Field</label>
     <select class="form-control" ng-model="active.sizeField" ng-options="field.prettyName for field in fields" ng-required="false" ng-disabled="(fields.length == 0)" ng-change="handleChangeSizeField()">
         <option value="">None</option>
     </select>
 </div>
 
-<div class="form-group" ng-hide="hideAdvancedOptions">
+<div class="form-group" ng-hide="bindings.hideAdvancedOptions">
     <label>Linked Node(s) Field</label>
     <select class="form-control" ng-model="active.linkedNodeField" ng-options="field.prettyName for field in fields" ng-required="false" ng-disabled="(fields.length == 0)" ng-change="handleChangeLinkedNodeField()">
         <option value="">None</option>
     </select>
 </div>
 
-<div class="form-group" ng-hide="hideAdvancedOptions">
+<div class="form-group" ng-hide="bindings.hideAdvancedOptions">
     <label>Linked Node(s) Name Field</label>
     <select class="form-control" ng-model="active.linkedNameField" ng-options="field.prettyName for field in fields" ng-required="false" ng-disabled="(fields.length == 0)" ng-change="handleChangeLinkedNameField()">
         <option value="">None</option>
     </select>
 </div>
 
-<div class="form-group" ng-hide="hideAdvancedOptions">
+<div class="form-group" ng-hide="bindings.hideAdvancedOptions">
     <label>Linked Node(s) Size Field</label>
     <select class="form-control" ng-model="active.linkedSizeField" ng-options="field.prettyName for field in fields" ng-required="false" ng-disabled="(fields.length == 0)" ng-change="handleChangeLinkedSizeField()">
         <option value="">None</option>
     </select>
 </div>
 
-<div class="form-group" ng-hide="hideAdvancedOptions">
+<div class="form-group" ng-hide="bindings.hideAdvancedOptions">
     <label>Date Field</label>
     <select class="form-control" ng-model="active.dateField" ng-options="field.prettyName for field in fields" ng-required="false" ng-disabled="(fields.length == 0)" ng-change="handleChangeDateField()">
         <option value="">None</option>
     </select>
 </div>
 
-<div class="form-group" ng-hide="hideAdvancedOptions">
+<div class="form-group" ng-hide="bindings.hideAdvancedOptions">
     <label>Flag Field</label>
     <select class="form-control" ng-model="active.flagField" ng-options="field.prettyName for field in fields" ng-required="false" ng-disabled="(fields.length == 0)" ng-change="handleChangeFlagField()">
         <option value="">None</option>
     </select>
 </div>
 
-<div class="form-group" ng-hide="hideAdvancedOptions">
+<div class="form-group" ng-hide="bindings.hideAdvancedOptions">
     <label>Text Field</label>
     <select class="form-control" ng-model="active.textField" ng-options="field.prettyName for field in fields" ng-required="false" ng-disabled="(fields.length == 0)" ng-change="handleChangeTextField()">
         <option value="">None</option>
