--- a/client/components/timeline/timelineOptions.html
+++ b/client/components/timeline/timelineOptions.html
@@ -1,4 +1,4 @@
-<div class="form-group" ng-hide="hideAdvancedOptions">
+<div class="form-group" ng-hide="bindings.hideAdvancedOptions">
     <label>Date Field</label>
     <select class="form-control" ng-model="active.dateField" ng-options="field.prettyName for field in fields" ng-required="true" ng-disabled="(fields.length == 0)" ng-change="handleChangeDateField()">
     </select>
