Minor various updates to the single table visualization, options menu, and styling.

--- a/client/app/app.less
+++ b/client/app/app.less
@@ -30,6 +30,7 @@
 @import "../components/import/import.less";
 @import "../components/lineChart/lineChart.less";
 @import "../components/map/map.less";
+@import "../components/multipleTableVisualization/multipleTableVisualization.less";
 @import "../components/networkGraph/networkGraph.less";
 @import "../components/newsFeed/newsFeed.less";
 @import "../components/opsClock/opsClock.less";
