--- a/client/components/filterBuilder/filterBuilder.html
+++ b/client/components/filterBuilder/filterBuilder.html
@@ -36,7 +36,7 @@
       <div class="clearfix"></div>
     </div>
 
-    <div class="filter neon-well neon-well-dark neon-well-thin form-inline" ng-repeat="filterRow in filterTable.getFilterRows()">
+    <div class="filter neon-well neon-well-dark form-inline" ng-repeat="filterRow in filterTable.getFilterRows()">
       <div class="form-group">
         <select class="form-control" ng-model="filterRow.database" ng-options="database.prettyName for database in databases" ng-disabled="(databases.length < 2)" ng-change="updateTablesForFilterRow(filterRow)">
         </select>
@@ -78,7 +78,7 @@
       <div class="clearfix"></div>
     </div>
 
-    <div class="filter neon-well neon-well-thin form-inline">
+    <div class="filter neon-well form-inline">
       <div class="form-group">
         <select id="filter-table-selection" class="form-control" ng-model="selectedDatabase" ng-options="database.prettyName for database in databases" ng-disabled="(databases.length < 2)" ng-change="updateTables()">
         </select>
